rephrasing and modifying the CSS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-<app-top-bar></app-top-bar>
+<header class="header">
+  <app-top-bar></app-top-bar>
+</header>
 
 <main class="mainContent">
   <router-outlet></router-outlet>
 </main>
+
+<footer class="footerPage">
+  <app-footer></app-footer>
+</footer>
