--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,3 +1,67 @@
+.Products{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-size: 50px;
+    font-weight: 400;
+}
+.ProductsContents{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+}
 .productCards{
-    background-color: #e0e0e0;
+    background-color: #f3f3f3;
+    flex-basis: 32%;
+    border-radius: 10px;
+    margin-bottom: 40px;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    padding-bottom: 10px;
+
+}
+.titleCard{
+    
+    margin-bottom: 10px;
+    padding-top: 20px;
+    text-align: center;
+    height: 50px;
+    width: 100%;
+}
+.titleCard > h3 > a{
+    text-decoration: none;
+    color: #000;
+    font-size: 30px;
+    font-weight: 300;
+}
+.titleCard:hover{
+    background-color: #c4c4c4;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.titleCard > h3 > a:hover{
+    color: #ffffff;
+}
+.productCards > p{
+    margin-top: 20px;
+    font-size: 15px;
+    padding:20px;
+}
+
+.productCards > button{
+    width: 180px;
+    height: 35px;
+    border-radius: 5px;
+    border: none;
+    background-color: #1976d2;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 18px;
+}
+.productCards > button:hover{
+    background-color: #58abff;
 }
