--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,23 +1,26 @@
-<h2> Products </h2>
+<h2 class="Products"> Products </h2>
 
-<div *ngFor="let product of products" class="productCards">
-    <h3>
-        <a [routerLink]="['/products', product.id]">
-            {{ product.name }}
-        </a>
-    </h3>
+<div class="ProductsContents">
+    <div *ngFor="let product of products" class="productCards">
+           <div class="titleCard">
+                <h3>
+                    <a [routerLink]="['/products', product.id]">
+                        {{ product.name }}
+                    </a>
+                </h3>
+            </div>
+        <p *ngIf="product.description"> 
+            Description: {{product.description}}
+        </p>
 
-    <p *ngIf="product.description"> 
-        Description: {{product.description}}
-    </p>
+        <button type="button" (click)="share()">
+            Share
+        </button>
 
-    <button type="button" (click)="share()">
-        Share
-    </button>
+        <app-product-alerts
+            [product]="product"
+            (notify)="onNotify()">
+        </app-product-alerts>
 
-    <app-product-alerts
-        [product]="product"
-        (notify)="onNotify()">
-    </app-product-alerts>
-
+    </div>
 </div>
