--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,8 +1,13 @@
-<h2>Product Details</h2>
+<div class="ProductDetailsContainer">
 
-<div *ngIf="product">
-  <h3>{{ product.name }}</h3>
-  <h4>{{ product.price | currency }}</h4>
-  <p>{{ product.description }}</p>
-  <button type="button" (click)="addToCart(product)">Buy</button>
+    <div class="ProductDetails">
+      <h2>Product Details</h2>
+
+      <div *ngIf="product">
+        <h3>{{ product.name }}</h3>
+        <h4>{{ product.price | currency }}</h4>
+        <p>{{ product.description }}</p>
+        <button type="button" (click)="addToCart(product)">Buy</button>
+      </div>
+    </div>
 </div>
